# byng

./: DocumentationTechnique.md  README.md  Vagrantfile  byngdeploiement.md  inventory.py  playbook.yml
cluster/: Vagrantfile  byng.api.1.service  byng.api.2.service  byng.api.3.service  byng.crawler.1.service  byng.crawler.2.service  byng.crawler.3.service  byng.db.1.service  byng.db.2.service  byng.db.3.service  byng.web.1.service  byng.web.2.service  byng.web.3.service
config/: bashrc  etcd.upstart  pgpool.conf  query.nginx  registry.conf  registry.config.yml  registry.nginx  registry.upstart  schema.sql  search.nginx  skydns.upstart  ssh.conf
src/api/: CMakeLists.txt  Dockerfile  README.md
src/api/src/: main.cpp
src/crawler/: CMakeLists.txt  Dockerfile
src/crawler/src/: html.cpp  html.h  main.cpp
src/db/: Dockerfile  pg_hba.conf  postgresql.conf
src/web/: Dockerfile
src/web/public/: index.html
src/web/public/css/: home.css
