CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (byng-crawler)

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE (Boost 1.54 REQUIRED thread filesystem system)

FIND_LIBRARY(CURL_LIBRARY NAMES curl)

FIND_LIBRARY(GUMBO_LIBRARY NAMES gumbo)

FIND_LIBRARY(AMQP_LIBRARY NAMES SimpleAmqpClient)

find_library(PQXX_LIBRARIES NAMES pqxx)
find_library(PQ_LIBRARIES NAMES pq)
find_library(POCO_FOUNDATION PocoFoundation)

INCLUDE_DIRECTORIES (
  ${Boost_INCLUDE_DIR}
  ${CPPNETLIB_INCLUDE_DIRS}
)

FILE (
  GLOB_RECURSE
  source_files
  src/*
)

ADD_EXECUTABLE (
  byng-crawler
  ${source_files}
)


TARGET_LINK_LIBRARIES (
  ${PROJECT_NAME} 
  ${Boost_LIBRARIES} 
  ${CURL_LIBRARY}
  ${GUMBO_LIBRARY}
  ${AMQP_LIBRARY}
  ${PQXX_LIBRARIES}
  ${PQ_LIBRARIES}
  ${POCO_FOUNDATION}
)
